# SKSG_TChinese

./: .gitignore  GEMINI.md  LICENSE  README-DEV.md  README.md  pyproject.toml  requirements.txt  sk.icns  sk_cht.py
.github/workflows/: Bulid.yml
CHT/: ZH_UI.txt  chinese_body.json  chinese_body_bold.json
CHT/Font/: chinese_body.json  chinese_body_bold.json  chinese_body_bold_Material.json  simsun_tmpro_Material.json
CHT/Text/: ZH_Achievements.txt  ZH_AutoSaveNames.txt  ZH_Belltown.txt  ZH_Bonebottom.txt  ZH_Caravan.txt  ZH_City.txt  ZH_Coral.txt  ZH_Crawl.txt  ZH_Credits List.txt  ZH_Dust.txt  ZH_Enclave.txt  ZH_Error.txt  ZH_Fast Travel.txt  ZH_Forge.txt  ZH_General.txt  ZH_Greymoor.txt  ZH_Inspect.txt  ZH_Journal.txt  ZH_Lore.txt  ZH_MainMenu.txt  ZH_Map Zones.txt  ZH_Peak.txt  ZH_Pilgrims.txt  ZH_Prompts.txt  ZH_Quests.txt  ZH_Shop.txt  ZH_Song.txt  ZH_Titles.txt  ZH_Tools.txt  ZH_UI.txt  ZH_Under.txt  ZH_Wanderers.txt  ZH_Weave.txt  ZH_Wilds.txt
CHT/Text_Chs/: ZH_Achievements.txt  ZH_AutoSaveNames.txt  ZH_Belltown.txt  ZH_Bonebottom.txt  ZH_Caravan.txt  ZH_City.txt  ZH_Coral.txt  ZH_Crawl.txt  ZH_Credits List.txt  ZH_Deprecated.txt  ZH_Dust.txt  ZH_Enclave.txt  ZH_Error.txt  ZH_Fast Travel.txt  ZH_Forge.txt  ZH_General.txt  ZH_Greymoor.txt  ZH_Inspect.txt  ZH_Journal.txt  ZH_Lore.txt  ZH_MainMenu.txt  ZH_Map Zones.txt  ZH_Peak.txt  ZH_Pilgrims.txt  ZH_Prompts.txt  ZH_Quests.txt  ZH_Shellwood.txt  ZH_Shop.txt  ZH_Song.txt  ZH_Titles.txt  ZH_Tools.txt  ZH_UI.txt  ZH_Under.txt  ZH_Wanderers.txt  ZH_Weave.txt  ZH_Wilds.txt
CHT/Text_Re/: ZH_Achievements.txt  ZH_AutoSaveNames.txt  ZH_Belltown.txt  ZH_Bonebottom.txt  ZH_Caravan.txt  ZH_City.txt  ZH_Coral.txt  ZH_Crawl.txt  ZH_Credits List.txt  ZH_Deprecated.txt  ZH_Dust.txt  ZH_Enclave.txt  ZH_Error.txt  ZH_Fast Travel.txt  ZH_Forge.txt  ZH_General.txt  ZH_Greymoor.txt  ZH_Inspect.txt  ZH_Journal.txt  ZH_Lore.txt  ZH_MainMenu.txt  ZH_Map Zones.txt  ZH_Peak.txt  ZH_Pilgrims.txt  ZH_Prompts.txt  ZH_Quests.txt  ZH_Shellwood.txt  ZH_Shop.txt  ZH_Song.txt  ZH_Titles.txt  ZH_Tools.txt  ZH_UI.txt  ZH_Under.txt  ZH_Wanderers.txt  ZH_Weave.txt  ZH_Wilds.txt
CHT/font_new/: chinese_body.json  chinese_body_bold.json
CHT/font_old/: chinese_body.json
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_cli_interface.py  test_modding_workflow.py
tests/unit/: test_file_wrapper.py  (+5 more)
